--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,6 @@
-BOT_TOKEN = 
+BOT_TOKEN =
+BOT_DEV =
 
-AIRTABLE_TOKEN = 
-AIRTABLE_APP_ID = 
+AIRTABLE_TOKEN =
+AIRTABLE_APP_ID =
+AIRTABLE_TEST_APP_ID =
